# resolute

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  README
src/: CMakeLists.txt  clause.cpp  clause.h  resolution.cpp  resolution.h  section.h
src/gtkmm/: CMakeLists.txt  about.cpp  about.h  gtkResolution.cpp  gtkResolution.h  gtkResolutionClauses.cpp  gtkResolutionClauses.h  gtkResolutionSponsors.cpp  gtkResolutionSponsors.h  licence.h  main.cpp  modelColumns.h  resolute.cpp  resolute.h  resolutionModel.cpp  resolutionModel.h  sponsorModel.cpp  sponsorModel.h
src/gtkmm/img/: resoluteLogo.xpm
src/test/: CMakeLists.txt  clause_test.cpp  clause_test.h  resolution_test.cpp  resolution_test.h  testrunner.cpp
